--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
   padding: 10px 150px 10px 150px;
   
   border-radius: 15px;
-  background-color: gray;
+  background-color: lightblue;
   
   text-align: left;
 }
