--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,15 @@
   text-align: left;
 }
 
+#contact-info  {
+  float:right;
+	margin-right: 5px;
+	padding-top: 5px;
+	font-size: 16px;
+	font-family: Verdana, sans-serif;
+	color: #ffffff;
+}
+
 #work-history {
   font-size: 42px;
 }
